# vibesafe-mvp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tests/: test_rules.py
vibesafe/: __init__.py  cli.py  report.py  rules.py  scanner.py  web.py
