[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vibesafe"
version = "0.1.0"
description = "AI-powered security scanner for vibe-coded projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
vibesafe = "vibesafe.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3.0", "mypy>=1.9"]
